fixed mount point error when merging disks (#29)
